Fix user image cropping

--- a/app/styles/user-profile.sass
+++ b/app/styles/user-profile.sass
@@ -36,6 +36,10 @@ $avatar-size: 48px
     transition-property: all
     width: $avatar-size
 
+    img
+      width: 100%
+      height: 100%
+
 @media screen and (min-height: 700px)
   .user-profile
     flex-direction: column
